# txtr

./: Cargo.toml  README.md
src/: cli.rs  encoder.rs  main.rs  txtr.rs
tests/: integration.rs
