[package]
name = "txtr"

authors = ["thinkbeard"]
categories = ["multimedia::images", "multimedia::encoding"]
description = "txtr convers images to text."
homepage = "https://github.com/thinkbeard/txtr"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/thinkbeard/txtr.git"
version = "0.2.0"

[dependencies]
docopt = "0.8"
image = "0.18.0"
imageproc = "0.13.0"
serde = "1.0"
serde_derive = "1.0"
