[package]
name = "txtr"
edition = "2021"

authors = ["thinkbeard"]
categories = ["multimedia::images", "multimedia::encoding"]
description = "txtr converts images to text."
homepage = "https://github.com/thinkbeard/txtr"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/thinkbeard/txtr.git"
version = "1.0.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
image = "0.25"
imageproc = "0.26"
serde = { version = "1.0", features = ["derive"] }
